--- a/realsense2_camera/package.xml
+++ b/realsense2_camera/package.xml
@@ -25,6 +25,7 @@
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>diagnostic_updater</build_depend>
   <build_depend>librealsense2</build_depend>
+  <build_depend>timestamp_corrector_msgs</build_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>nodelet</run_depend>  
@@ -37,6 +38,7 @@
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>diagnostic_updater</run_depend>
   <run_depend>librealsense2</run_depend>
+  <run_depend>timestamp_corrector_msgs</run_depend>
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
